# Kanshigan

./: .gitignore  README.md
.dvc/: config
.github/workflows/: build-paper.yml  sync-to-gitlab.yml
data/: README.md
diario-de-bordo/: 01-definicao-do-projeto.md  02-documentacao-academica.md  03-infraestrutura-ci-cd.md  04-framework-de-evidencias.md  06-configuracao-multi-sistema-operacional.md  07-migracao-sam3-huggingface.md  08-experimento-sam3-huggingface.md  08-sam3-nao-e-viavel-como-pipeline-final.md  09-sincronizacao-de-dados-dvc.md  10-shift-pre-banca-e-reformulacao-da-pergunta.md  11-mapa-de-literatura-related-work.md  12-design-da-pipeline-pre-banca.md  13-protocolo-experimental-e-cronograma.md  14-execucao-da-pipeline-pre-banca.md  15-ajustes-do-paper-pos-revisao.md  16-comparacoes-de-arquitetura-e-validacao-do-anotador.md  16-reescrita-caps-1-2-pos-feedback-orientador.md  17-faxina-de-codigo-e-comparacao-de-rastreadores.md  18-integracao-do-feedback-da-banca-vram-versoes-e-busca.md  19-metodologia-explicita-e-ineditismo-defensavel.md  comparacao-trabalhos-relacionados.md
diario-de-bordo/05-experimento-sam3-poc/: 01-setup-e-dependencias.md  02-teste-de-prompts.md  03-video-tracking-e-vram.md  04-resultados-e-limitacoes.md  05-pipeline-dinamico.md
diario-de-bordo/09-locate-anything-nvidia/: 00-indice.md  01-o-que-e-o-locate-anything.md  02-viabilidade-na-4070-e-no-macos.md  03-comparacao-e-decisao.md
docs/: busca-literatura-ineditismo.md
docs/apresentacao-pre-banca/: index-banca.html  index-curta.html  index.html  outline.md  roteiro-banca.md  roteiro-curto.md  roteiro.md
docs/paper/: main.typ  refs.bib
docs/paper-sbc/: main.typ  refs.bib  sbc-template.typ
docs/paper-sbc/sections/: discussion.typ  introduction.typ  methodology.typ  related-work.typ  results.typ
docs/paper/sections/: dataset.typ  experiments.typ  introduction.typ  methodology.typ  related-work.typ
docs/project-plan/: main.typ
docs/project-plan/sections/: context.typ  objectives.typ  research-problem.typ  research-question.typ  timeline.typ
docs/project-plan/utils/: title.typ
docs/projeto-de-pesquisa/: refs.bib
docs/projeto-de-pesquisa/sections/: justification.typ  methodology.typ  objectives.typ
experiments/locate-anything-test/: .gitignore  README.md  detect.py  pyproject.toml
experiments/pre-banca/: .gitignore  README.md  compose_figures.py  crop.py  dohyo.py  editor.py  evaluate.py  events.py  figures.py  identity_gold.py  infer.py  make_gold_crop.py  mark_rounds.py  metrics.py  prep_clips.py  preview_annotations.py  pyproject.toml  schema.py  segment_rounds.py  tracker_comparison.py  tracking.py  train.py
experiments/pre-banca/configs/: clips.example.yaml  kanshigan.yaml  kanshigan_goldjp.yaml
experiments/pre-banca/tests/: test_crop.py  test_dohyo.py  test_evaluate.py  test_events.py  test_metrics.py  test_schema.py  test_tracking.py
experiments/sam3-poc/: annotate_gold_images.py  annotate_to_yolo.py  annotate_video.py  annotate_video_original.py  pyproject.toml  sam_overlay.py  test_prompts.py
notebooks/: modified_sam3_edt.py  pyproject.toml  sam3_agnostic_experiments.py  sam3_experiments.py  yolo_baseline_alternative.py
notebooks/local-packages/decord/: pyproject.toml
notebooks/source/: annotate_image.py  annotate_video.py
paper/: main.typ  refs.bib
paper/sections/: conclusion.typ  experiments.typ  introduction.typ  related-work.typ
project-plan/sections/: justification.typ  methodology.typ  references.typ  relevance.typ
project-plan/utils/: sections.typ  style.typ
projeto-de-pesquisa/: main.typ
projeto-de-pesquisa/sections/: introduction.typ  literature-review.typ  methodology.typ  timeline.typ
results/: .gitignore
results/E2_yolo_bt_vs_gold/gold_zb01/: gold_zb01.json  gold_zb01_tracks.txt
results/E2_yolo_oc_vs_gold/: gold_zb01.json  gold_zb01_tracks.txt
results/E2_yolo_oc_vs_gold/gold_zb01/: gold_zb01.json
results/E4_tracker_comparison/: comparison.json  gold_zb01_botsort_tracks.txt  gold_zb01_bytetrack_tracks.txt  gold_zb01_deepocsort_tracks.txt  gold_zb01_ocsort_tracks.txt
