[project]
name = "notebooks"
version = "0.1.0"
description = "SAM 3 segmentation experiments – Marimo notebooks"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.21.1",
    "packaging<26",
    "torch>=2.7.0",
    "torchvision",
    "torchaudio",
    "transformers>=4.50.0",
    "opencv-python>=4.10.0",
    "pandas>=2.3.3",
    "pillow",
    "triton; sys_platform == 'linux'",
    "matplotlib>=3.10.8",
    "requests>=2.33.1",
    "python-dotenv>=1.2.2",
    "ultralytics>=8.4.46",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
